# slack-bot-sample

./: .gitignore  pyproject.toml
app/: main.py
app/Slack/blocks/: notification.py
app/Slack/util/: index.py  lib.py
