[tool.poetry]
name = "slack-bot-sample"
version = "0.1.0"
description = ""
authors = ["taiki-fw <taiki_52@outlook.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
black = "^20.8b1"
pylint = "^2.7.4"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
slack-sdk = "^3.5.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
